--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
-    "prod" : "npx tailwindcss -o ./src/css/all-min.css --minify"
+    "start": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "prod": "npx tailwindcss -o ./src/css/all-min.css --minify"
   },
   "keywords": [],
   "author": "",
